####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libclipboard.a

INCLUDES = $(all_includes)

libclipboard_a_METASOURCES = AUTO

libclipboard_a_SOURCES = umldrag.cpp umlclipboard.cpp idchangelog.cpp 


EXTRA_DIST = idchangelog.cpp idchangelog.h umlclipboard.cpp umlclipboard.h umldrag.cpp umldrag.h 

####### kdevelop will overwrite this part!!! (end)############
