#
#  - Deactivate UMLWidget-plugin ( sept 2003 )
#    This is experimental code, and we don't want to have it in the next stable release
#noinst_LTLIBRARIES = libdiagram.la
#
#INCLUDES = -I../dialogs -I$(srcdir)/dialogs $(all_includes)
#
#libdiagram_la_METASOURCES = AUTO
#
#libdiagram_la_SOURCES = diagram.cpp diagramview.cpp tool.cpp toolbar.cpp \
#                        diagramelement.cpp diagramwidget.cpp path.cpp pathsegment.cpp \
#                        widgetset.cpp defaultwidgetset.cpp unknownumlwidget.cpp selecttool.cpp pathtool.cpp \
#                        associationtool.cpp associationwidget.cpp toolfactory.cpp widgetfactory.cpp
#
#libdiagram_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic

