noinst_LTLIBRARIES = libdialogs.la

INCLUDES = -I$(top_srcdir) $(all_includes)

libdialogs_la_METASOURCES = AUTO

libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp \
			codegenerationwizardbase.ui umlrolepropertiesbase.ui \
                        codegenerationoptionsbase.ui codegenerationpolicypage.cpp \
			codegenerationpolicybase.ui codeviewerdialogbase.ui codevieweroptionsbase.ui\
			selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp defaultcodegenpolicypage.cpp codeviewerdialog.cpp \
                        configgeneratorsbase.ui configcodegenerators.cpp codeeditor.cpp notedialog.cpp activitydialog.cpp activitypage.cpp \
                        umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp \
                        statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp \
                        classpropdlg.cpp classoptionspage.cpp classgenpage.cpp \
                        assocpropdlg.cpp assocpage.cpp diagrampropertiespage.ui assocrolepage.cpp assocgenpage.cpp \
                        umltemplatedialog.cpp umbrellodialog.cpp \
                        classpropertiesbase.ui classpropertiespage.cpp interfacepropertiesbase.ui interfacepropertiespage.cpp \
                        packagepropertiesbase.ui packagepropertiespage.cpp \
                        classattributesbase.ui classattributespage.cpp classifieroperationsbase.ui classifieroperationspage.cpp \
                        operationpropertiesbase.ui operationpropertiespage.cpp attributepropertiesbase.ui attributepropertiespage.cpp \
                        parameterpropertiesbase.ui parameterpropertiespage.cpp \
                        classtemplatesbase.ui classtemplatespage.cpp templatepropertiesbase.ui templatepropertiespage.cpp \
                        umlobjectassociationsbase.ui umlobjectassociationspage.cpp umlroledialog.cpp umlroleproperties.cpp \
                        widgetcolorsbase.ui widgetcolorspage.cpp codevieweroptionspage.cpp

libdialogs_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic


