noinst_LTLIBRARIES = libdialogs.la

INCLUDES = -I$(top_srcdir) $(all_includes)

libdialogs_la_METASOURCES = AUTO

libdialogs_la_SOURCES = classpropertiesbase.ui \
			codegenerationoptionsbase.ui \
			codegenerationpolicybase.ui \
			codegenerationwizardbase.ui \
			codeviewerdialogbase.ui \
			codevieweroptionsbase.ui \
			configgeneratorsbase.ui \
			diagrampropertiespage.ui \
			interfacepropertiesbase.ui \
			packagepropertiesbase.ui \
			parameterpropertiesbase.ui \
			sellanguagesbase.ui \
			umlobjectassociationsbase.ui \
			umlrolepropertiesbase.ui \
activitydialog.cpp \
activitypage.cpp \
assocgenpage.cpp \
assocpage.cpp \
assocpropdlg.cpp \
assocrolepage.cpp \
classgenpage.cpp \
classifierlistpage.cpp\
classoptionspage.cpp \
classpropdlg.cpp \
classpropertiespage.cpp \
classwizard.cpp \
codeeditor.cpp \
codegenerationoptionspage.cpp \
codegenerationpolicypage.cpp \
codegenerationwizard.cpp \
codeviewerdialog.cpp \
codevieweroptionspage.cpp \
configcodegenerators.cpp \
defaultcodegenpolicypage.cpp \
diagramprintpage.cpp \
interfacepropertiespage.cpp \
notedialog.cpp \
overwritedialogue.cpp \
packagepropertiespage.cpp \
parameterpropertiespage.cpp \
parmpropdlg.cpp \
selectlanguagesdlg.cpp \
selectopdlg.cpp \
settingsdlg.cpp \
statedialog.cpp \
umlattributedialog.cpp \
umlobjectassociationspage.cpp \
umloperationdialog.cpp \
umltemplatedialog.cpp \
umlroledialog.cpp \
umlroleproperties.cpp \
umlviewdialog.cpp \
umlwidgetcolorpage.cpp

libdialogs_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic


