noinst_LTLIBRARIES = libdialogs.la

INCLUDES = -I$(top_srcdir) $(all_includes)

libdialogs_la_METASOURCES = AUTO

libdialogs_la_SOURCES = \
			codegenerationoptionsbase.ui \
			codegenerationpolicybase.ui \
			codegenerationwizardbase.ui \
			codeviewerdialogbase.ui \
			codevieweroptionsbase.ui \
			diagrampropertiespage.ui \
			exportallviewsdialogbase.ui \
			umlrolepropertiesbase.ui \
activitydialog.cpp \
activitypage.cpp \
assocgenpage.cpp \
assocpage.cpp \
assocpropdlg.cpp \
assocrolepage.cpp \
classgenpage.cpp \
classifierlistpage.cpp\
classoptionspage.cpp \
classpropdlg.cpp \
classwizard.cpp \
codeeditor.cpp \
codegenerationoptionspage.cpp \
codegenerationpolicypage.cpp \
codegenerationwizard.cpp \
codeviewerdialog.cpp \
codevieweroptionspage.cpp \
defaultcodegenpolicypage.cpp \
diagramprintpage.cpp \
exportallviewsdialog.cpp \
notedialog.cpp \
overwritedialogue.cpp \
pkgcontentspage.cpp \
parmpropdlg.cpp \
selectopdlg.cpp \
settingsdlg.cpp \
statedialog.cpp \
umlattributedialog.cpp \
umlentityattributedialog.cpp \
umloperationdialog.cpp \
umltemplatedialog.cpp \
umlroledialog.cpp \
umlroleproperties.cpp \
umlviewdialog.cpp \
umlwidgetcolorpage.cpp

libdialogs_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic


