
add_subdirectory(global)

if(BUILD_ICONS)
    set(ICONS
        accept_signal
        accept_time_event
        activity-fork
        actor
        aggregation
        align-horizontal-center
        align-horizontal-left
        align-horizontal-right
        align-vertical-bottom
        align-vertical-center
        align-vertical-top
        anchor
        andline
        artifact
        association
        asynchron
        box
        branch
        category2parent
        category
        check_constraint
        child2category
        choice-rhomb
        choice-round
        class-or-package
        class
        component
        composition
        containment
        CVglobal_meth
        CVglobal_var
        CVimplementation_meth
        CVimplementation_signal
        CVimplementation_slot
        CVimplementation_var
        CVnamespace
        CVprivate_meth
        CVprivate_signal
        CVprivate_slot
        CVprivate_var
        CVprotected_meth
        CVprotected_signal
        CVprotected_slot
        CVprotected_var
        CVpublic_meth
        CVpublic_signal
        CVpublic_slot
        CVpublic_var
        CVstruct
        datatype
        deep-history
        dependency
        diag_activity
        diagbase
        diag_class
        diag_collaboration
        diag_component
        diag_deployment
        diag_entityrelationship
        diag_sequence
        diag_state
        diag_usecase
        distribute-horizontal
        distribute-vertical
        end_state
        entity
        enum
        foreignkey_constraint
        generalise
        initial
        interface
        join
        junction
        node
        note
        object
        package
        port
        primarykey_constraint
        realization
        refactor
        relationship
        send_signal
        shallow-history
        state-fork
        subsystem
        template
        text
        umbr-coll-message-asynchronous
        umbr-coll-message-synchronous
        umbr-message-asynchronous
        umbr-message-synchronous
        uniassociation
        unique_constraint
        usecase
    )
    generate_icons("${ICONS}" 22)
    # for visual inspecting
    #generate_icons("${ICONS}" 128)
endif()

if(BUILD_CURSOR_ICONS)
    set(CURSOR_ICONS
        send_signal
        accept_signal
        accept_time_event
        activity-fork
        actor
        aggregation
        anchor
        andline
        artifact
        association
        box
        branch
        category2parent
        category
        child2category
        choice-rhomb
        choice-round
        class
        combined_fragment
        component
        composition
        containment
        datatype
        deep-history
        dependency
        end_of_life
        end_state
        entity
        enum
        exception
        final_activity
        generalisation
        initial_state
        interface
        join
        junction
        node
        note
        object_node
        object
        package
        pin
        precondition
        PrePostCondition
        region
        relationship
        send_signal
        shallow-history
        state-fork
        text
        umbr-coll-message-asynchronous
        umbr-coll-message-synchronous
        umbr-message-asynchronous
        umbr-message-found
        umbr-message-lost
        umbr-message-synchronous
        uniassociation
        usecase
    )
    generate_cursor_icons("${CURSOR_ICONS}" 32)
endif()

set(ALL_ICONS
    accept_signal
    accept_time_event
    activity-fork
    actor
    aggregation
    align-horizontal-center
    align-horizontal-left
    align-horizontal-right
    align-vertical-bottom
    align-vertical-center
    align-vertical-top
    anchor
    andline
    arrow
    artifact
    association
    box
    branch
    category
    category2parent
    check_constraint
    child2category
    choice-rhomb
    choice-round
    class
    class-or-package
    combined_fragment
    component
    composition
    containment
    cursor-accept_signal
    cursor-accept_time_event
    cursor-activity-fork
    cursor-actor
    cursor-aggregation
    cursor-anchor
    cursor-andline
    cursor-artifact
    cursor-association
    cursor-box
    cursor-branch
    cursor-category
    cursor-category2parent
    cursor-child2category
    cursor-choice-rhomb
    cursor-choice-round
    cursor-class
    cursor-combined_fragment
    cursor-component
    cursor-composition
    cursor-containment
    cursor-datatype
    cursor-deep-history
    cursor-dependency
    cursor-end_of_life
    cursor-end_state
    cursor-entity
    cursor-enum
    cursor-exception
    cursor-final_activity
    cursor-generalisation
    cursor-initial_state
    cursor-interface
    cursor-join
    cursor-junction
    cursor-node
    cursor-note
    cursor-object
    cursor-object_node
    cursor-package
    cursor-pin
    cursor-precondition
    cursor-PrePostCondition
    cursor-region
    cursor-relationship
    cursor-send_signal
    cursor-shallow-history
    cursor-state-fork
    cursor-text
    cursor-umbr-coll-message-asynchronous
    cursor-umbr-coll-message-synchronous
    cursor-umbr-message-asynchronous
    cursor-umbr-message-found
    cursor-umbr-message-lost
    cursor-umbr-message-synchronous
    cursor-uniassociation
    cursor-usecase
    CVglobal_meth
    CVglobal_var
    CVimplementation_meth
    CVimplementation_signal
    CVimplementation_slot
    CVimplementation_var
    CVnamespace
    CVprivate_meth
    CVprivate_signal
    CVprivate_slot
    CVprivate_var
    CVprotected_meth
    CVprotected_signal
    CVprotected_slot
    CVprotected_var
    CVpublic_meth
    CVpublic_signal
    CVpublic_slot
    CVpublic_var
    CVstruct
    datatype
    deep-history
    dependency
    distribute-horizontal
    distribute-vertical
    end_of_life
    end_state
    entity
    enum
    exception
    final_activity
    foreignkey_constraint
    generalisation
    initial_state
    interface
    join
    junction
    node
    note
    object
    object_node
    package
    pin
    port
    precondition
    PrePostCondition
    primarykey_constraint
    refactor
    region
    relationship
    send_signal
    shallow-history
    startlogo
    state-fork
    subsystem
    template
    text
    umbr-coll-message-asynchronous
    umbr-coll-message-synchronous
    umbr-message-asynchronous
    umbr-message-found
    umbr-message-lost
    umbr-message-synchronous
    uniassociation
    unique_constraint
    usecase
)

foreach(i ${ALL_ICONS})
    install(FILES ${i}.png DESTINATION ${DATA_INSTALL_DIR}/umbrello/pics)
endforeach()

if(NOT BUILD_KF5)
    kde4_install_icons(${DATA_INSTALL_DIR}/umbrello/icons)
else()
    ecm_install_icons(
        ICONS   hi16-actions-umbrello_diagram_activity.png
                hi16-actions-umbrello_diagram_class.png
                hi16-actions-umbrello_diagram_collaboration.png
                hi16-actions-umbrello_diagram_component.png
                hi16-actions-umbrello_diagram_deployment.png
                hi16-actions-umbrello_diagram_sequence.png
                hi16-actions-umbrello_diagram_state.png
                hi16-actions-umbrello_diagram_usecase.png
                hi22-actions-umbrello_diagram_activity.png
                hi22-actions-umbrello_diagram_class.png
                hi22-actions-umbrello_diagram_collaboration.png
                hi22-actions-umbrello_diagram_component.png
                hi22-actions-umbrello_diagram_deployment.png
                hi22-actions-umbrello_diagram_entityrelationship.png
                hi22-actions-umbrello_diagram_sequence.png
                hi22-actions-umbrello_diagram_state.png
                hi22-actions-umbrello_diagram_usecase.png
        THEME hicolor
        DESTINATION ${ICON_INSTALL_DIR}
    )
endif()
