picsdir = $(kde_datadir)/umbrello/pics

pics_DATA = actor.png \
aggregation.png \
anchor.png \
arrow.png \
association.png \
broom.xpm \
component.png \
composition.png \
constraint.xpm \
containment.png \
CVglobal_meth.png \
CVglobal_var.png \
CVnamespace.png \
CVprivate_meth.png \
CVprivate_signal.png \
CVprivate_slot.png \
CVprivate_var.png \
CVprotected_meth.png \
CVprotected_signal.png \
CVprotected_slot.png \
CVprotected_var.png \
CVpublic_meth.png \
CVpublic_signal.png \
CVpublic_slot.png \
CVpublic_var.png \
CVstruct.png \
dependency.png \
end_state.png \
generalisation.png \
hline.xpm \
implements.xpm \
initial_state.png \
interface.png \
datatype.png \
enum.png \
largepackage.xpm \
lifeline.xpm \
line.xpm \
message-synchronous.png \
message-asynchronous.png \
note.png \
object.png \
output_win.xpm \
realizes.xpm \
smallpackage.xpm \
snapshot.xpm \
startlogo.png \
text.png \
umlclass_template.xpm \
class.png \
uniassociation.png \
usecase.png \
usecaserelation.xpm \
vline.xpm \
branch.png \
fork.png \
package.png \
artifact.png \
box.png \
public.png \
protected.png \
private.png \
node.png \
cursor-actor.png \
cursor-usecase.png \
cursor-initial-state.png \
cursor-package.png \
cursor-aggregation.png \
cursor-component.png \
cursor-containment.png \
cursor-interface.png \
cursor-datatype.png \
cursor-enum.png \
cursor-text.png \
cursor-anchor.png \
cursor-composition.png \
cursor-message-asynchronous.png \
cursor-class.png \
cursor-artifact.png \
cursor-dependency.png \
cursor-message-synchronous.png \
cursor-uniassociation.png \
cursor-association.png \
cursor-end-state.png \
cursor-node.png \
cursor-box.png \
cursor-fork.png \
cursor-note.png \
cursor-branch.png \
cursor-generalisation.png \
cursor-object.png

KDE_ICON = cr16-action-umbrello_diagram_activity.png \
cr16-action-umbrello_diagram_class.png \
cr16-action-umbrello_diagram_collaboration.png \
cr16-action-umbrello_diagram_component.png \
cr16-action-umbrello_diagram_deployment.png \
cr16-action-umbrello_diagram_sequence.png \
cr16-action-umbrello_diagram_state.png \
cr16-action-umbrello_diagram_usecase.png

